# Potato

./: README.md  analyze_curvature_trend.py  analyze_pitch_problem.py  check_path_continuity.py  diagnose_curvature_drop.py  pyproject.toml  verify_curvature_units.py
output/: peeling_trajectory.csv  peeling_trajectory_adaptive.csv
src/: potato_peeling_path_generator.py  process_mesh_fixed.py  tool_potato_peeling_path_generator.py
