[project]
name = "potato"
version = "0.1.0"
description = "Helical toolpath generator for potato peeling with ISO-scallop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "trimesh>=4.0.0",
    "open3d>=0.17.0",
    "rtree>=1.4.1",
    "networkx>=3.4.2",
]
